# llm-rag-chatbot

./: .gitignore  README.md  docker-compose.yml
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: entrypoint.sh  main.py
chatbot_api/src/agents/: salt_rag_agent.py
chatbot_api/src/retrievers/: document_retriever.py
chatbot_frontend/: pyproject.toml
