[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.109.0",
    "langchain==0.3.7",
    "langchain-openai==0.2.9",
    "langchainhub==0.1.14",
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "openai==1.55.3",
    "opentelemetry-api==1.22.0",
    "pydantic==2.10.0",
    "uvicorn==0.32.1",
    "python-dotenv==1.0.1",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.7",
    "beautifulsoup4==4.12.3",
    "sentence-transformers==3.3.1",
    "einops==0.8.0 ",
    "chromadb==0.5.20",
    "langchain-huggingface==0.1.2",
    "langsmith==0.1.146"
]

[project.optional-dependencies]
dev = ["black", "flake8"]